Correction des erreurs de contraste
retrait des z-index inutile +color de certains texte

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ a:hover {
 
 .navbar {
     margin-bottom: 0;
-    z-index: 1;
+    
 }
 
 .navbar-brand {
@@ -342,7 +342,7 @@ a:hover {
     padding-top: 2px;
     margin-right: -16px;
     float: right;
-    z-index: 1;
+    
 }
 
 .nav > li {
@@ -382,7 +382,7 @@ a:hover {
 .nav-invert .navbar-brand {
     float: right;
     position: relative;
-    z-index: 2;
+    
 }
 
 @media (min-width: 768px) {
@@ -539,13 +539,14 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
+    opacity: 1;
     z-index: 500;
     transition: all .3s ease-in-out;
 }
 
 .scrollToTop span {
     margin-top: 6px;
+    color: #FFF;
 }
 
 .showScrollTop {
@@ -570,7 +571,7 @@ a[data-lightbox]:hover::before {
     background: rgba(0, 0, 0, .6);
     color: #FFF;
     font-weight: 100;
-    z-index: 1;
+    
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -615,7 +616,7 @@ a[data-lightbox]:hover img {
     position: absolute;
     top: 20px;
     right: 20px;
-    z-index: 20;
+    
     background: rgba(0, 0, 0, .5);
     border: none;
     line-height: 30px;
@@ -638,7 +639,7 @@ a[data-lightbox]:hover img {
     transition: all .2s ease-in-out;
     position: absolute;
     top: 45%;
-    z-index: 1;
+    
     opacity: 0.4;
 }
 
@@ -1021,9 +1022,7 @@ h4 {
     .a-block {
         padding: 0 10px;
     }
-    .btn-dwn {
-        display: none;
-    }
+    
     .voffset {
         margin-top: 5px;
     }
